apps/guestbook/templates/redis-follower-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-follower
  labels:
    app: redis
    role: follower
    tier: backend
spec:
  ports:
    - port: 6379
  selector:
    app: redis
    role: follower
    tier: backend
