apps/guestbook/templates/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guestbook
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`guestbook.esuarez.info`)
      priority: 10
      services:
        - name: frontend
          port: 80
  tls:
    certResolver: leresolver
